# build-report

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake
include/: main-head.cpp  main-head.hpp  main-head.hpp~  main-tail.cpp  main-tail.hpp  main-tail.hpp~  print-macros.hpp  print-macros.hpp~
not-ready-for-prime-time/: common-macros-gnu.hpp  common-predefined-macros-gnu.txt  machinebits.c  sizeof-expanded.cpp  sizeof.cpp
src/: all-std.cpp  macros-all-common.cpp  macros-all-common.cpp~  macros-all-std.cpp  macros-common-endian.cpp~  macros-common-inttypes.cpp~  macros-common-types.cpp~  macros-common.cpp~  macros-endian-common.cpp  macros-endian-common.cpp~  macros-endian-std.cpp  macros-inttypes-common.cpp  macros-inttypes-common.cpp~  macros-inttypes-std.cpp  sizeof-all-std.cpp  sizeof-inttypes-std.cpp  sizeof-primitive-std.cpp
